--- a/googledatabinding/src/main/AndroidManifest.xml
+++ b/googledatabinding/src/main/AndroidManifest.xml
@@ -1,25 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.nullcognition.googledatabinding" >
+<manifest
+	package = "com.nullcognition.googledatabinding"
+	xmlns:android = "http://schemas.android.com/apk/res/android"
+	>
 
-    <application
-        android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
-        <activity
-            android:name=".ActivityMain"
-            android:label="@string/app_name" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+	<application
+		android:allowBackup = "true"
+		android:icon = "@mipmap/ic_launcher"
+		android:label = "@string/app_name"
+		android:theme = "@style/AppTheme"
+		>
+		<activity
+			android:label = "@string/app_name"
+			android:name = ".ActivityMain"
+			>
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-        <activity
-            android:name=".Main2Activity"
-            android:label="@string/title_activity_main2" >
-        </activity>
-    </application>
+		</activity>
+		<activity
+			android:label = "@string/title_activity_main2"
+			android:name = ".Main2Activity"
+			>
+			<intent-filter>
+				<action android:name = "android.intent.action.MAIN"/>
+				<category android:name = "android.intent.category.LAUNCHER"/>
+			</intent-filter>
+		</activity>
+	</application>
 
 </manifest>
