--- a/build.gradle
+++ b/build.gradle
@@ -8,8 +8,8 @@ buildscript{
 		classpath 'com.android.tools.build:gradle:1.3.0'
 		classpath "com.android.databinding:dataBinder:1.0-rc1"
 
-		// NOTE: Do not place your application dependencies here; they belong
-		// in the individual module build.gradle files
+		classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
+
 	}
 }
 
