--- a/effectiveandroidui/build.gradle
+++ b/effectiveandroidui/build.gradle
@@ -1,4 +1,6 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.neenbedankt.android-apt'
+
 
 android{
 	compileSdkVersion 23
@@ -22,5 +24,20 @@ android{
 dependencies{
 	compile fileTree(dir: 'libs', include: ['*.jar'])
 	testCompile 'junit:junit:4.12'
+
 	compile 'com.android.support:appcompat-v7:23.0.1'
+
+	compile 'com.android.support:support-v4:23.0.1'
+
+	apt 'com.google.dagger:dagger-compiler:2.0.1'
+	compile 'com.google.dagger:dagger:2.0.1'
+	compile 'javax.annotation:javax.annotation-api:1.2'
+
+	compile 'com.jakewharton:butterknife:5.1.+'
+
+	compile 'com.github.pedrovgs:renderers:1.1.+'
+
+	compile 'com.squareup.picasso:picasso:2.3.+'
+
+	compile 'com.github.pedrovgs:draggablepanel:1.+'
 }
