--- a/effectiveandroidui/src/main/AndroidManifest.xml
+++ b/effectiveandroidui/src/main/AndroidManifest.xml
@@ -1,11 +1,18 @@
-<manifest xmlns:android = "http://schemas.android.com/apk/res/android"
-          package = "com.nullcognition.effectiveandroidui">
+<manifest
+	package = "com.nullcognition.effectiveandroidui"
+	xmlns:android = "http://schemas.android.com/apk/res/android"
+	>
 
-	<application android:allowBackup = "true"
-	             android:label = "@string/app_name"
-	             android:icon = "@mipmap/ic_launcher"
-	             android:supportsRtl = "true"
-	             android:theme = "@style/AppTheme">
+	<uses-permission android:name="android.permission.INTERNET"/>
+	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+
+	<application
+		android:allowBackup = "true"
+		android:icon = "@mipmap/ic_launcher"
+		android:label = "@string/app_name"
+		android:supportsRtl = "true"
+		android:theme = "@style/AppTheme"
+		>
 
 	</application>
 
