--- a/effectiveandroidui/build.gradle
+++ b/effectiveandroidui/build.gradle
@@ -33,11 +33,11 @@ dependencies{
 	compile 'com.google.dagger:dagger:2.0.1'
 	compile 'javax.annotation:javax.annotation-api:1.2'
 
-	compile 'com.jakewharton:butterknife:5.1.+'
+	compile 'com.jakewharton:butterknife:7.0.1'
 
-	compile 'com.github.pedrovgs:renderers:1.1.+'
+	compile 'com.github.pedrovgs:renderers:2.0.3'
 
-	compile 'com.squareup.picasso:picasso:2.3.+'
+	compile 'com.squareup.picasso:picasso:2.5.2'
 
-	compile 'com.github.pedrovgs:draggablepanel:1.+'
+	compile 'com.github.pedrovgs:draggablepanel:1.8'
 }
