--- a/effectiveandroidui/src/main/AndroidManifest.xml
+++ b/effectiveandroidui/src/main/AndroidManifest.xml
@@ -1,18 +1,35 @@
+<?xml version="1.0" encoding="utf-8"?>
 <manifest
 	package = "com.nullcognition.effectiveandroidui"
 	xmlns:android = "http://schemas.android.com/apk/res/android"
 	>
 
-	<uses-permission android:name="android.permission.INTERNET"/>
-	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+	<uses-permission android:name = "android.permission.INTERNET"/>
+	<uses-permission android:name = "android.permission.ACCESS_NETWORK_STATE"/>
 
 	<application
 		android:allowBackup = "true"
-		android:icon = "@mipmap/ic_launcher"
 		android:label = "@string/app_name"
+		android:name = ".TvShowsApplication"
 		android:supportsRtl = "true"
 		android:theme = "@style/AppTheme"
 		>
+		<activity android:name = ".ui.activity.MainActivity">
+			<intent-filter>
+				<action android:name = "android.intent.action.MAIN"/>
+
+				<category android:name = "android.intent.category.LAUNCHER"/>
+			</intent-filter>
+
+		</activity>
+
+
+		<activity
+			android:configChanges = "orientation|screenSize"
+			android:label = "@string/app_name"
+			android:name = ".ui.activity.TvShowActivity"
+			/>
+
 
 	</application>
 
