--- a/googledatabinding01/build.gradle
+++ b/googledatabinding01/build.gradle
@@ -26,4 +26,14 @@ dependencies{
 	compile fileTree(dir: 'libs', include: ['*.jar'])
 	testCompile 'junit:junit:4.12'
 	compile 'com.android.support:appcompat-v7:23.1.0'
+
+	compile 'io.reactivex:rxandroid:1.0.1'
+	compile 'io.reactivex:rxjava:1.0.14'
+
+//	compile 'com.github.fabioCollini.mv2m:mv2mrx:0.3.1'
+	compile 'com.sora.util.akatsuki:akatsuki-api:0.0.3'
+	apt 'com.sora.util.akatsuki:akatsuki-compiler:0.0.3'
+
+	compile 'com.hannesdorfmann.parcelableplease:annotation:1.0.1'
+	apt 'com.hannesdorfmann.parcelableplease:processor:1.0.1'
 }
