--- a/build.gradle
+++ b/build.gradle
@@ -1,26 +1,32 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
-buildscript{
-	repositories{
-		jcenter()
-	}
-	dependencies{
-		classpath 'com.android.tools.build:gradle:1.3.0'
+buildscript {
+    repositories {
+        jcenter()
+    }
+    dependencies {
+        classpath 'com.android.tools.build:gradle:2.0.0-alpha3'
 
-		classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
+        classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
 
-		classpath 'me.tatarka:gradle-retrolambda:3.2.3'
+        classpath 'me.tatarka:gradle-retrolambda:3.2.3'
 
-		classpath "com.android.databinding:dataBinder:1.0-rc2" // use for google databinding
+        classpath "com.android.databinding:dataBinder:1.0-rc2" // use for google databinding
 //		classpath "com.android.databinding:dataBinder:1.0-rc3" // not working
 //		classpath "com.android.databinding:dataBinder:1.0-rc4" // not working
 
-	}
+    }
 }
 
-allprojects{
-	repositories{
-		jcenter()
-		maven { url "https://jitpack.io" }
-	}
+allprojects {
+    repositories {
+        jcenter()
+        maven { url "https://jitpack.io" }
+        maven {
+            url 'https://oss.sonatype.org/content/repositories/snapshots/'
+        }
+        maven {
+            url 'http://oss.jfrog.org/artifactory/oss-snapshot-local'
+        }
+    }
 }
