--- a/mosby/build.gradle
+++ b/mosby/build.gradle
@@ -5,7 +5,7 @@ apply plugin: 'me.tatarka.retrolambda'
 
 android{
 	compileSdkVersion 23
-	buildToolsVersion "23.0.0"
+	buildToolsVersion "23.0.2"
 
 	defaultConfig{
 		applicationId "com.nullcognition.mosby"
@@ -32,8 +32,8 @@ dependencies{
 	compile fileTree(dir: 'libs', include: ['*.jar'])
 	testCompile 'junit:junit:4.12'
 
-	compile 'com.android.support:appcompat-v7:23.0.1'
-	compile 'com.android.support:recyclerview-v7:23.0.1'
+	compile 'com.android.support:appcompat-v7:23.1.1'
+	compile 'com.android.support:recyclerview-v7:23.1.1'
 
 	compile 'com.hannesdorfmann.mosby:mvp:2.0.0'
 	compile 'com.hannesdorfmann.mosby:viewstate:2.0.0'
@@ -47,8 +47,8 @@ dependencies{
 	compile 'com.hannesdorfmann.annotatedadapter:annotation:1.1.1'
 	compile 'com.hannesdorfmann.annotatedadapter:support-recyclerview:1.1.1'
 
-	compile 'com.google.dagger:dagger:2.0.1'
-	apt 'com.google.dagger:dagger-compiler:2.0.1'
+	compile 'com.google.dagger:dagger:2.1-SNAPSHOT'
+	apt 'com.google.dagger:dagger-compiler:2.1-SNAPSHOT'
 	compile 'javax.annotation:javax.annotation-api:1.2'
 
 	compile 'com.squareup.okhttp:okhttp:2.5.0'
