--- a/practice00/build.gradle
+++ b/practice00/build.gradle
@@ -4,7 +4,7 @@ apply plugin: 'com.android.databinding'
 
 android{
 	compileSdkVersion 23
-	buildToolsVersion "23.0.0"
+	buildToolsVersion "23.0.2"
 
 	defaultConfig{
 		applicationId "com.nullcognition.practice00"
@@ -25,7 +25,7 @@ dependencies{
 	compile fileTree(dir: 'libs', include: ['*.jar'])
 	testCompile 'junit:junit:4.12'
 
-	compile 'com.android.support:appcompat-v7:23.0.1'
+	compile 'com.android.support:appcompat-v7:23.1.1'
 
 	compile 'com.squareup.moshi:moshi:1.0.0'
 
@@ -38,8 +38,8 @@ dependencies{
 	compile 'com.hannesdorfmann.fragmentargs:annotation:2.1.2'
 	apt 'com.hannesdorfmann.fragmentargs:processor:2.1.2'
 
-	apt 'com.google.dagger:dagger-compiler:2.0.1'
-	compile 'com.google.dagger:dagger:2.0.1'
+	apt 'com.google.dagger:dagger-compiler:2.1-SNAPSHOT'
+	compile 'com.google.dagger:dagger:2.1-SNAPSHOT'
 	compile 'javax.annotation:javax.annotation-api:1.2'
 
 	compile 'com.jakewharton:butterknife:7.0.1'
