--- a/googledatabinding/build.gradle
+++ b/googledatabinding/build.gradle
@@ -2,8 +2,8 @@ apply plugin: 'com.android.application'
 apply plugin: 'com.android.databinding'
 
 android{
-	compileSdkVersion 23
-	buildToolsVersion "23.0.2"
+	compileSdkVersion rootProject.ext.compileSdkVersion
+	buildToolsVersion rootProject.ext.buildToolsVersion
 
 	defaultConfig{
 		applicationId "com.nullcognition.googledatabinding"
@@ -22,7 +22,6 @@ android{
 
 dependencies{
 	compile fileTree(dir: 'libs', include: ['*.jar'])
-
-	compile 'com.jakewharton:butterknife:7.0.1'
+	compile 'com.jakewharton:butterknife:' + rootProject.ext.butterknife_v
 
 }
