--- a/joebirchmvvm/build.gradle
+++ b/joebirchmvvm/build.gradle
@@ -4,8 +4,8 @@ apply plugin: 'com.android.databinding'
 apply plugin: 'com.neenbedankt.android-apt'
 
 android{
-	compileSdkVersion 23
-	buildToolsVersion "23.0.2"
+	compileSdkVersion rootProject.ext.compileSdkVersion
+	buildToolsVersion rootProject.ext.buildToolsVersion
 
 	defaultConfig{
 		applicationId "com.nullcognition.joebirchmvvm"
@@ -24,13 +24,13 @@ android{
 
 dependencies{
 	compile fileTree(dir: 'libs', include: ['*.jar'])
-	testCompile 'junit:junit:4.12'
-	compile 'com.android.support:appcompat-v7:23.1.1'
+	testCompile 'junit:junit:' + rootProject.ext.junit_v
+
+	compile 'com.android.support:appcompat-v7:' + rootProject.ext.appcompat7_v
+	compile 'com.android.support:support-v4:' + rootProject.ext.appcompat7_v
 
 	final SUPPORT_LIBRARY_VERSION = '23.1.1'
-	final DAGGER_VERSION = '2.1-SNAPSHOT'
 
-	compile "com.android.support:support-v4:$SUPPORT_LIBRARY_VERSION"
 	compile "com.android.support:appcompat-v7:$SUPPORT_LIBRARY_VERSION"
 	compile "com.android.support:cardview-v7:$SUPPORT_LIBRARY_VERSION"
 	compile "com.android.support:design:$SUPPORT_LIBRARY_VERSION"
@@ -44,12 +44,12 @@ dependencies{
 
 	compile 'io.reactivex:rxandroid:0.25.0'
 
-	compile 'com.jakewharton:butterknife:7.0.1'
+	compile 'com.jakewharton:butterknife:' + rootProject.ext.butterknife_v
 	compile 'com.jakewharton.timber:timber:3.1.0'
 
 	compile 'org.ocpsoft.prettytime:prettytime:3.2.7.Final'
 
-	compile "com.google.dagger:dagger:$DAGGER_VERSION"
-	apt "com.google.dagger:dagger-compiler:$DAGGER_VERSION"
+	compile 'com.google.dagger:dagger:'+ rootProject.ext.dagger2snap_v
+	apt 'com.google.dagger:dagger-compiler:'+ rootProject.ext.dagger2snap_v
 	provided 'org.glassfish:javax.annotation:10.0-b28'
 }
