--- a/mosby/build.gradle
+++ b/mosby/build.gradle
@@ -4,8 +4,8 @@ apply plugin: 'me.tatarka.retrolambda'
 
 
 android{
-	compileSdkVersion 23
-	buildToolsVersion "23.0.2"
+	compileSdkVersion rootProject.ext.compileSdkVersion
+	buildToolsVersion rootProject.ext.buildToolsVersion
 
 	defaultConfig{
 		applicationId "com.nullcognition.mosby"
@@ -30,28 +30,28 @@ android{
 
 dependencies{
 	compile fileTree(dir: 'libs', include: ['*.jar'])
-	testCompile 'junit:junit:4.12'
+	testCompile 'junit:junit:' + rootProject.ext.junit_v
 
-	compile 'com.android.support:appcompat-v7:23.1.1'
-	compile 'com.android.support:recyclerview-v7:23.1.1'
+	compile 'com.android.support:appcompat-v7:' + rootProject.ext.appcompat7_v
+	compile 'com.android.support:recyclerview-v7:'+ rootProject.ext.appcompat7_v
 
 	compile 'com.hannesdorfmann.mosby:mvp:2.0.0'
 	compile 'com.hannesdorfmann.mosby:viewstate:2.0.0'
 
 	compile 'com.jakewharton:butterknife:7.0.1'
 
-	compile 'io.reactivex:rxandroid:1.0.1'
-	compile 'io.reactivex:rxjava:1.0.14'
+	compile 'io.reactivex:rxandroid:' + rootProject.ext.rxandroid_v
+	compile 'io.reactivex:rxjava:' + rootProject.ext.rxjava_v
 
 	apt 'com.hannesdorfmann.annotatedadapter:processor:1.1.1'
 	compile 'com.hannesdorfmann.annotatedadapter:annotation:1.1.1'
 	compile 'com.hannesdorfmann.annotatedadapter:support-recyclerview:1.1.1'
 
-	compile 'com.google.dagger:dagger:2.1-SNAPSHOT'
-	apt 'com.google.dagger:dagger-compiler:2.1-SNAPSHOT'
+	compile 'com.google.dagger:dagger:' + rootProject.ext.dagger2snap_v
+	apt 'com.google.dagger:dagger-compiler:'+ rootProject.ext.dagger2snap_v
 	compile 'javax.annotation:javax.annotation-api:1.2'
 
-	compile 'com.squareup.okhttp:okhttp:2.5.0'
+	compile 'com.squareup.okhttp:okhttp:' + rootProject.ext.okhttp_v
 	compile 'com.squareup.picasso:picasso:2.5.2'
 	compile 'com.squareup.retrofit:retrofit:1.9.0'
 }
