--- a/widgets/build.gradle
+++ b/widgets/build.gradle
@@ -1,8 +1,8 @@
 apply plugin: 'com.android.application'
 
 android{
-	compileSdkVersion 23
-	buildToolsVersion "23.0.2"
+	compileSdkVersion rootProject.ext.compileSdkVersion
+	buildToolsVersion rootProject.ext.buildToolsVersion
 
 	defaultConfig{
 		applicationId "com.nullcognition.widgets"
@@ -21,6 +21,7 @@ android{
 
 dependencies{
 	compile fileTree(dir: 'libs', include: ['*.jar'])
-	testCompile 'junit:junit:4.12'
-	compile 'com.android.support:appcompat-v7:23.1.1'
+	testCompile 'junit:junit:' + rootProject.ext.junit_v
+
+	compile 'com.android.support:appcompat-v7:' + rootProject.ext.appcompat7_v
 }
