--- a/widgetswithcontentproviders/build.gradle
+++ b/widgetswithcontentproviders/build.gradle
@@ -1,8 +1,8 @@
 apply plugin: 'com.android.application'
 
 android{
-	compileSdkVersion 23
-	buildToolsVersion "23.0.2"
+	compileSdkVersion rootProject.ext.compileSdkVersion
+	buildToolsVersion rootProject.ext.buildToolsVersion
 
 	defaultConfig{
 		applicationId "com.nullcognition.widgetswithcontentproviders"
@@ -21,11 +21,12 @@ android{
 
 dependencies{
 	compile fileTree(dir: 'libs', include: ['*.jar'])
-	testCompile 'junit:junit:4.12'
-	compile 'com.android.support:appcompat-v7:23.1.1'
-	compile "com.android.support:recyclerview-v7:23.1.1"
+	testCompile 'junit:junit:' + rootProject.ext.junit_v
 
-	compile 'com.jakewharton:butterknife:7.0.1'
+	compile 'com.android.support:appcompat-v7:' + rootProject.ext.appcompat7_v
+	compile "com.android.support:recyclerview-v7:" + rootProject.ext.appcompat7_v
+
+	compile 'com.jakewharton:butterknife:' + rootProject.ext.butterknife_v
 
 	compile 'com.pushtorefresh.storio:content-resolver:1.6.1'
 }
