--- a/mosby/build.gradle
+++ b/mosby/build.gradle
@@ -47,8 +47,8 @@ dependencies{
 	compile 'com.hannesdorfmann.annotatedadapter:annotation:1.1.1'
 	compile 'com.hannesdorfmann.annotatedadapter:support-recyclerview:1.1.1'
 
-	compile 'com.google.dagger:dagger:' + rootProject.ext.dagger2snap_v
-	apt 'com.google.dagger:dagger-compiler:'+ rootProject.ext.dagger2snap_v
+	compile 'com.google.dagger:dagger:' + rootProject.ext.dagger2_v
+	apt 'com.google.dagger:dagger-compiler:' + rootProject.ext.dagger2_v
 	compile 'javax.annotation:javax.annotation-api:1.2'
 
 	compile 'com.squareup.okhttp:okhttp:' + rootProject.ext.okhttp_v
