Fast layout basic example not working, due to crash See: https://github.com/FabianTerhorst/FastLayout/issues/27

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,4 @@
 include ':googledatabinding', ':effectiveandroidui', ':mosby', ':practice00', ':joebirchmvvm',
+    ':fastlayout',
     ':svg',
     ':googledatabinding01', ':widgets', ':widgetswithcontentproviders', ':fastlayoutconductor'
