--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,7 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.2.2'
+        classpath 'io.fabianterhorst:fastlayout-gradle-plugin:0.0.2-alpha37'
 
         classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
 
