--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.2.2'
+      classpath 'com.android.tools.build:gradle:2.3.0-alpha1'
         classpath 'io.fabianterhorst:fastlayout-gradle-plugin:0.0.2-alpha37'
 
         classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
