--- a/fastlayout/build.gradle
+++ b/fastlayout/build.gradle
@@ -3,8 +3,8 @@ apply plugin: 'fastlayout'
 
 
 android {
-  compileSdkVersion 25
-  buildToolsVersion "25.0.0"
+  compileSdkVersion rootProject.ext.compileSdkVersion
+  buildToolsVersion rootProject.ext.buildToolsVersion
 
   defaultConfig {
     applicationId "com.nullcognition.fastlayout"
