--- a/joebirchmvvm/build.gradle
+++ b/joebirchmvvm/build.gradle
@@ -1,7 +1,6 @@
 apply plugin: 'com.android.application'
 
 apply plugin: 'com.android.databinding'
-apply plugin: 'com.neenbedankt.android-apt'
 
 android{
 	compileSdkVersion rootProject.ext.compileSdkVersion
@@ -50,6 +49,6 @@ dependencies{
 	compile 'org.ocpsoft.prettytime:prettytime:3.2.7.Final'
 
 	compile 'com.google.dagger:dagger:' + rootProject.ext.dagger2_v
-	apt 'com.google.dagger:dagger-compiler:' + rootProject.ext.dagger2_v
+	annotationProcessor 'com.google.dagger:dagger-compiler:' + rootProject.ext.dagger2_v
 	provided 'org.glassfish:javax.annotation:10.0-b28'
 }
