--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,5 @@
 include ':googledatabinding', ':effectiveandroidui', ':mosby', ':practice00', ':joebirchmvvm',
+    ':litho',
     ':fastlayout',
     ':svg',
     ':googledatabinding01', ':widgets', ':widgetswithcontentproviders', ':fastlayoutconductor'
