--- a/svg/build.gradle
+++ b/svg/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.application'
 
 android {
-  compileSdkVersion 25
-  buildToolsVersion "25.0.0"
+  compileSdkVersion rootProject.ext.compileSdkVersion
+  buildToolsVersion rootProject.ext.buildToolsVersion
 
   defaultConfig {
     applicationId "com.nullcognition.svg"
     minSdkVersion 18
-    targetSdkVersion 24
+    targetSdkVersion 25
     versionCode 1
     versionName "1.0"
 
@@ -32,7 +32,6 @@ dependencies {
   compile 'com.android.support:appcompat-v7:25.0.0'
   testCompile 'junit:junit:4.12'
 
-  compile 'com.android.support.constraint:constraint-layout:1.0.0-beta3'
-  compile 'com.android.support.constraint:constraint-layout-solver:1.0.0-beta3'
+  compile 'com.android.support.constraint:constraint-layout:1.0.2'
   compile 'com.android.support:percent:25.0.0'
 }
